# yeelink_rpi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Yeelink  a.out  cmake_install.cmake  init_d.c  install.sh  main.c  server.c  str.c
LED/: CMakeLists.txt  LED.c  LED.h  Makefile  cmake_install.cmake
server/: CMakeLists.txt  Makefile  cmake_install.cmake  server.c  server.h
tools/: CMakeLists.txt  Makefile  cmake_install.cmake  init_d.c  str.c  tools.h
