cmake_minimum_required(VERSION 2.8)
#set(CMAKE_VERBOSE_MAKEFILE ON)
#set(CMAKE_C_FLAGS "-lwiringPi")
project(Yeelink)
add_subdirectory(server)
add_subdirectory(LED)
add_subdirectory(tools)
set(APP_SRC main.c)
add_executable(Yeelink ${APP_SRC})
target_link_libraries(Yeelink -lwiringPi libserver libLED libstr )#libinit_d)
